--- a/.env
+++ b/.env
@@ -1,23 +1,1 @@
-# Dependencies
-/node_modules
-
-# Environment variables
-.env
-.env.local
-
-# Build artifacts
-/dist
-/build
-/temp
-
-# Logs and databases
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-*.sqlite
-.data
-
-# Optional: OS and Editor files
-.DS_Store
-Thumbs.db
-.vscode
+PORT = 3000
