--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "prisma": "^6.19.1"
   }
 }
