--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 
-DATABASE_URL="postgresql://user:password@localhost:5432/api-ticket?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:5433/api-ticket?schema=public"
